--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 .App {
   text-align: center;
 }
+html,body{
+  padding: 2rem;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,16 +20,77 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.outer-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+  width: 80vw;
+  max-width: 1280px;
+  overflow: hidden;
+  border-radius: 10px;
+  
+  box-sizing: content-box;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.1),
+  2px 2px 2px 2px rgba(0,0,0,0.1),
+  3px 3px 3px 3px rgba(0,0,0,0.1),
+  4px 4px 4px 4px rgba(0,0,0,0.1);
+  
+}
+
+
+
+.output-container{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  width: 80%;
+  height: 100%;
+  justify-self: flex-end;
+  align-self: flex-end;
+  
+  overflow-y: scroll;
+  padding: 2rem;
+  box-sizing: border-box;
+  background-color: rgb(163, 182, 183);;
+  
 }
+.input-rows{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.placeholder{
+  width: 80%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: rgb(163, 182, 183);
+  align-items: center;
+}
+
+.prompt-container{
+  background-color: lightblue;
+  display: flex;
+  padding: 2rem;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #bf9e60;
+  overflow: hidden;
+  width: 25%;
+  height: 100%;
+  justify-self: flex-start;
+  align-self: flex-start;
+}
+
+input {
+  margin: 2.2rem;
+}
+
 
 .App-link {
   color: #61dafb;
@@ -35,4 +103,44 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.placeholder-text{
+  display: flex;
+  align-self: center;
+  justify-self: center;
+  justify-items: center;
+}
+
+
+.input-item{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: left;
+  width: 100%;
+}
+
+label{
+  text-align:start
+}
+
+.about-button{
+  background-color: black;
+  color: white;
+  border: none;
+  font-size: large;
+  font-style: bold;
+  height: 5rem;
+  width: 100%;
+  text-align: center;
+
+  cursor: pointer;
+}
+
+
+.about-modal{
+
 }
